<resources>
    <string name="app_name">Gidget</string>
    <string name="signInMethod">singInMethod</string>
    <string name="providerID">providerID</string>
    <string name="username">sampleUsername</string>
    <string name="photoUrl">photoUrl</string>
    <string name="UID">uid</string>
    <string name="name">Sample Name</string>
    <string name="email">email</string>
    <string name="welcome_to_gidget">Welcome to Gidget</string>
    <string name="login_with">Login with</string>
    <string name="a_github_activity_widget">A GitHub Activity Widget</string>
    <string name="date">Date</string>
    <string name="repo_name">Repo Name</string>
    <string name="icon_map">Icon Map</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Elementum nec facilisi odio condimentum neque faucibus.</string>
    <string name="search">Search User / Organization</string>
    <string name="organization">User / Org</string>
    <string name="user">User</string>
    <string name="repository">Repo</string>
    <string name="no_items_searched">No items searched…</string>
    <string name="country">country</string>
    <string name="add_to_gidget">Add to Gidget</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="appwidget_commit_message">commit message</string>
    <string name="empty_widget">Add a user or repo to this widget</string>
    <string name="picture">picture</string>
    <string name="logout">Logout</string>
    <string name="city">City</string>
    <string name="bio">Bio</string>
    <string name="following">Following</string>
    <string name="numbersCount">0</string>
    <string name="followers">Followers</string>
    <string name="activity">Feed</string>
    <string name="adding_to_widget_loading">Adding to Widget…</string>
    <string name="cancel">Cancel</string>
    <string name="last_updated">Last updated - …</string>
    <string name="empty_feedpage_text">No GitHub activity found</string>
    <string name="delete_user_widget_title">Remove a user / repository</string>
    <string name="add">Add </string>
    <string name="remove">Remove</string>
    <string name="delete_gidget_items_empty_text">No users/repos added to Gidget</string>
    <string name="public_repositories">Public Repositories</string>
    <string name="me">Me</string>
</resources>