<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_bg">

    <TextView
        android:id="@+id/appwidgetEmptyViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginVertical="@dimen/_15sdp"
        android:contentDescription="@string/appwidget_text"
        android:fontFamily="@font/nexa_bold"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/appwidgetEmptyViewText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/empty_widget"
        android:textColor="@color/lightGrey"
        android:textSize="@dimen/_15sdp"
        android:fontFamily="@font/montserrat"/>

</RelativeLayout>