<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:layout_marginVertical="@dimen/_10sdp"
    android:paddingHorizontal="@dimen/_20sdp">


    <androidx.cardview.widget.CardView
        android:id="@+id/searchPageRecyclerItemProfilePhotoCover"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        app:cardCornerRadius="50dp">

        <ImageView
            android:id="@+id/searchPageRecyclerItemProfilePhoto"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@color/darkestBlue"
            android:src="@drawable/ic_baseline_person_24"
            tools:ignore="ContentDescription" />

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_toEndOf="@+id/searchPageRecyclerItemProfilePhotoCover"
        android:orientation="vertical">

        <TextView
            android:id="@+id/searchPageRecyclerItemNameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/_5sdp"
            android:fontFamily="@font/montserrat"
            android:text="@string/name"
            android:textColor="@color/blue"
            android:textSize="@dimen/_18sdp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/searchPageRecyclerItemUsernameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:text="@string/username"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp" />

        <TextView
            android:id="@+id/searchPageRecyclerItemLocationText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/_2sdp"
            android:fontFamily="@font/montserrat"
            android:text="@string/country"
            android:textColor="@color/lightGrey"
            android:textSize="@dimen/_10sdp" />
    </LinearLayout>

</RelativeLayout>