<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_bg"
    tools:context=".activities.ProfileActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/profilePageAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@android:color/transparent"
        app:elevation="0dp">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/profileBackButton"
                    android:layout_width="@dimen/_18sdp"
                    android:layout_height="@dimen/_18sdp"
                    android:layout_alignParentStart="true"
                    android:layout_marginEnd="10dp"
                    android:layout_toEndOf="@+id/profilePageAppName"
                    android:background="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:contentDescription="@string/picture"
                    android:focusable="true"
                    android:src="@drawable/ic_baseline_arrow_back_24" />

                <TextView
                    android:id="@+id/profilePageAppName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_toStartOf="@+id/profilePageLogo"
                    android:fontFamily="@font/nexa_bold"
                    android:text="@string/app_name"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_10sdp"
                    tools:ignore="RelativeOverlap" />

                <ImageButton
                    android:id="@+id/profilePageLogo"
                    android:layout_width="@dimen/_18sdp"
                    android:layout_height="@dimen/_18sdp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/picture"
                    android:scaleType="fitCenter"
                    android:src="@drawable/gidget_icon" />

            </RelativeLayout>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:id="@+id/profilePageSection0"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/profilePageAppBar">

        <RelativeLayout
            android:id="@+id/profilePageSection1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginVertical="20dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/profilePagePhotoCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                app:cardBackgroundColor="@android:color/transparent"
                app:cardCornerRadius="@dimen/_40sdp"
                app:cardElevation="0dp">

                <ImageView
                    android:id="@+id/profilePagePhoto"
                    android:layout_width="@dimen/_80sdp"
                    android:layout_height="@dimen/_80sdp"
                    android:contentDescription="@string/picture"
                    android:src="@drawable/ic_baseline_person_24" />
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/profilePagePhotoCard"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/profilePageName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/name"
                    android:textAlignment="textEnd"
                    android:textColor="@color/blue"
                    android:textSize="@dimen/_20sdp"
                    android:textStyle="bold"
                    tools:targetApi="p" />

                <TextView
                    android:id="@+id/profilePageUsername"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/username"
                    android:textAlignment="textEnd"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14sdp" />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/profilePageSection2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profilePageSection1"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginVertical="15dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginEnd="@dimen/_6sdp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/profilePageFollowerCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/numbersCount"
                    android:textColor="@color/blue"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/followers"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="@dimen/_6sdp"
                android:orientation="horizontal"
                tools:ignore="RelativeOverlap">

                <TextView
                    android:id="@+id/profilePageFollowingCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/numbersCount"
                    android:textColor="@color/blue"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/following"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </LinearLayout>
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/profilePageSection3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profilePageSection2"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginVertical="15dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:text="@string/bio"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/profilePageBio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_6sdp"
                android:layout_marginStart="@dimen/_2sdp"
                android:fontFamily="@font/montserrat"
                android:text="@string/lorem_ipsum"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/profilePageSection4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profilePageSection3"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginVertical="15dp"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/picture"
                android:src="@drawable/ic_baseline_location_on_24" />

            <TextView
                android:id="@+id/profilePageCity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/city"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/profilePageSection5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profilePageSection4"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginVertical="15dp">

            <TextView
                android:id="@+id/profilePageRepoText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:fontFamily="@font/montserrat"
                android:text="@string/public_repositories"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp" />

            <TextView
                android:id="@+id/profilePageRepoCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/profilePageRepoText"
                android:layout_marginStart="@dimen/_8sdp"
                android:text="@string/numbersCount"
                android:textColor="@color/blue"
                android:textSize="@dimen/_14sdp" />
        </RelativeLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/profilePageLogoutButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginHorizontal="30dp"
            android:layout_marginBottom="30dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardBackgroundColor="@color/feedPageRecyclerItemColor"
            app:cardCornerRadius="10dp"
            app:cardElevation="0dp">

            <TextView
                android:id="@+id/profilePageLogoutButtonText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginVertical="15dp"
                android:fontFamily="@font/nexa_bold"
                android:text="@string/logout"
                android:textColor="@color/blue"
                android:textSize="20sp" />
        </androidx.cardview.widget.CardView>
    </RelativeLayout>

    <ProgressBar
        android:id="@+id/profilepageProgressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:indeterminate="true"
        android:indeterminateTint="@color/white"
        android:minWidth="@dimen/_50sdp"
        android:minHeight="@dimen/_50sdp"
        android:visibility="gone"
        tools:targetApi="lollipop" />

</RelativeLayout>