<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_bg"
    tools:context=".UI.SearchActivity">

    <ImageButton
        android:id="@+id/searchPageBackButton"
        android:layout_width="@dimen/_20sdp"
        android:layout_height="@dimen/_20sdp"
        android:layout_marginVertical="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_5sdp"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_baseline_arrow_back_24"
        android:scaleType="fitCenter"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/searchPageSection1"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/searchPageBackButton"
        android:layout_marginHorizontal="20dp"
        app:cardBackgroundColor="@color/feedPageRecyclerItemColor"
        app:cardCornerRadius="30dp"
        app:cardElevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="20dp">

            <EditText
                android:id="@+id/searchPageSearchText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@id/searchPageSearchButton"
                android:autofillHints="@string/username"
                android:background="@null"
                android:ems="10"
                android:fontFamily="@font/montserrat"
                android:hint="@string/search"
                android:inputType="textPersonName"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <ImageButton
                android:id="@+id/searchPageSearchButton"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:background="@color/feedPageRecyclerItemColor"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_baseline_search_24" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/searchPageSection2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/searchPageSection1"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="25dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchPageSection1">

        <Button
            android:id="@+id/searchPageOrganizationButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="2"
            android:background="@drawable/roundedbutton_30dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/organization"
            android:textAllCaps="false"
            android:textColor="@color/blue"
            app:backgroundTint="@color/feedPageRecyclerItemColor" />

        <Button
            android:id="@+id/searchPageRepoButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/roundedbutton_30dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/repository"
            android:textAllCaps="false"
            android:textColor="@color/blue"
            app:backgroundTint="@color/feedPageRecyclerItemColor" />
    </LinearLayout>

    <TextView
        android:id="@+id/searchPageNoItemsSearchedText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lato"
        android:text="@string/no_items_searched"
        android:textColor="@color/lightGrey"
        android:textSize="@dimen/_14sdp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/searchPageRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/searchPageSection2"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchPageSection2"
        tools:listitem="@layout/search_page_recycler_item">

    </androidx.recyclerview.widget.RecyclerView>
</RelativeLayout>