<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_github_bg"
    tools:context=".activities.MainActivity">

    <Button
        android:id="@+id/buLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:foreground="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:drawableRight="@drawable/login_button_image"
        android:focusable="true"
        android:fontFamily="sans-serif-medium"
        android:paddingHorizontal="80dp"
        android:text="@string/login_with"
        android:textColor="@color/black"
        app:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.723"
        android:background="@drawable/roundedbutton_8dp"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nexa_bold"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="@dimen/_60sdp"
        app:layout_constraintBottom_toTopOf="@+id/buLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.385" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif"
        android:text="@string/a_github_activity_widget"
        android:textColor="@color/lightGrey"
        android:textSize="@dimen/_13sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvWelcome" />

    <ProgressBar
        android:id="@+id/mainPageProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="40dp"
        android:indeterminate="true"
        android:indeterminateTint="@color/white"
        android:minWidth="60dp"
        android:minHeight="60dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.719"
        tools:targetApi="lollipop" />
</androidx.constraintlayout.widget.ConstraintLayout>