<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_bg"
    tools:context=".activities.DeleteUserFromGidgetActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/deleteUserFromGidgetAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@android:color/transparent"
        app:elevation="0dp">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/deleteUserFromGidgetBackButton"
                    android:layout_width="@dimen/_18sdp"
                    android:layout_height="@dimen/_18sdp"
                    android:layout_alignParentStart="true"
                    android:layout_marginEnd="10dp"
                    android:layout_toEndOf="@+id/deleteUserFromGidgetAppName"
                    android:background="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:contentDescription="@string/picture"
                    android:focusable="true"
                    android:src="@drawable/ic_baseline_arrow_back_24" />

                <TextView
                    android:id="@+id/deleteUserFromGidgetAppName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_toStartOf="@+id/deleteUserFromGidgetLogo"
                    android:fontFamily="@font/nexa_bold"
                    android:text="@string/app_name"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_10sdp"
                    tools:ignore="RelativeOverlap" />

                <ImageButton
                    android:id="@+id/deleteUserFromGidgetLogo"
                    android:layout_width="@dimen/_18sdp"
                    android:layout_height="@dimen/_18sdp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/picture"
                    android:scaleType="fitCenter"
                    android:src="@drawable/gidget_icon" />

            </RelativeLayout>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/deleteUserFromGidgetTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/deleteUserFromGidgetAppBar"
        android:text="@string/delete_user_widget_title"
        android:textColor="@color/white"
        android:textSize="@dimen/_14sdp"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:fontFamily="@font/montserrat"
        android:layout_marginVertical="@dimen/_8sdp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/deleteUserFromGidgetRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/deleteUserFromGidgetTitle"
        android:layout_marginTop="@dimen/_10sdp"
        android:scrollbars="vertical"
        tools:listitem="@layout/delete_user_widget_recycleritem" />

    <ProgressBar
        android:id="@+id/deleteUserFromGidgetProgressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:indeterminate="true"
        android:indeterminateTint="@color/white"
        android:minWidth="@dimen/_50sdp"
        android:minHeight="@dimen/_50sdp"
        android:visibility="gone"
        tools:targetApi="lollipop" />

    <TextView
        android:id="@+id/deleteUserFromGidgetEmptyText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:fontFamily="@font/montserrat"
        android:text="@string/delete_gidget_items_empty_text"
        android:textColor="@color/lightGrey"
        android:textSize="@dimen/_12sdp"
        android:visibility="gone" />
</RelativeLayout>